--- a/run-container-jenkins-podman.yml
+++ b/run-container-jenkins-podman.yml
@@ -3,44 +3,33 @@
 - name: ensure jenkins container is running
   hosts: localhost
   connection: local
-  become: yes
 
   vars:
     container_state: running
     container_name: jenkins
     container_image_list:
-      - jenkins-blueocean
-    container_dir_config: pihole-etc
-    container_dir_data: pihole-dnsmasq.d
-    container_dir_owner: 0
-    container_dir_group: 0
+      #- jenkins-blueocean
+      - docker.io/jenkinsci/blueocean:latest
+    container_run_as_user: bblasco
+    container_run_as_group: bblasco
+    #container_dir_owner: 0
+    #container_dir_group: 0
     container_run_args: >-
       --rm
       --detach
-      -p 192.168.1.3:18080:8080/tcp
-      -p 192.168.1.3:50000:50000/tcp
-      -v "{{exported_container_volumes_basedir}}/{{container_dir_config}}:/etc/pihole:Z"
-      -v "{{exported_container_volumes_basedir}}/{{container_dir_data}}:/etc/dnsmasq.d:Z"
+      -p 18080:8080/tcp
+      -p 50000:50000/tcp
+      -v jenkins-data:/var/jenkins_home
+      -v jenkins-docker-certs:/certs/client:ro
+      --tz=local
       --hostname="jenkins.{{ my_domain }}"
-      --memory=512M
     firewall_port_list:
       - 18080:18080/tcp
       - 50000:50000/tcp
 
+
   tasks:
   - include_vars: vars/main.yml
-
-  - name: ensure container files mount point on host
-    tags: mount
-    file:
-      path: "{{exported_container_volumes_basedir}}/{{ item }}"
-      owner: "{{ container_dir_owner }}"
-      group: "{{ container_dir_group }}"
-      state: directory
-      recurse: yes
-    with_items:
-      - "{{container_dir_config}}"
-      - "{{container_dir_data}}"
 
   - name: ensure container state
     tags: container
