--- a/run-container-pihole-podman-micro.yml
+++ b/run-container-pihole-podman-micro.yml
@@ -25,13 +25,13 @@
       --hostname="pihole-micro.{{ my_domain }}"
       --memory=512M
       -e "TZ={{ my_timezone }}"
-      --dns 127.0.0.1,1.1.1.1
-    firewall_port_list:
-      - 53:53/tcp
-      - 53:53/udp
-      - 67:67/udp
-      - 80:80/tcp
-      - 443:443/tcp
+      --dns "127.0.0.1,1.1.1.1"
+    container_firewall_ports::
+      - 53/tcp
+      - 53/udp
+      - 67/udp
+      - 80/tcp
+      - 443/tcp
 
   tasks:
   - include_vars: vars/main.yml
